[package]
name = "project_moo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] } # Don't use "dynamic" feature for release!
bevy_prototype_lyon = "0.4.0" # Used to draw dynamic shapes for area bombs
